etc/tests/fuzz/errors/type/inferred-arithmetic-param.nshape
shape type-inferred-arithmetic-param {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "cannot assign string literal to int"
  source ny <<'NY'
use std.core

fn add1(x) {
   x + 1
}

print(add1("x"))
NY
}
